handled the error issue

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,8 @@
         <input class="loginPassword" type="password" placeholder="password"/>
         <button class="login">login</button>
         <a class="registerModalTrigger">Not registered?</a>
-
+          <div class="loginError invisible">
+          </div>
       </div>
     </div>
 
@@ -63,10 +64,13 @@
     </div>
 
     <div class="chatrooms invisible">
-      <!-- searchbox  -->
+                <!-- searchbox  -->
       <div class="searchBox">
         <input type="text" class="term" placeholder="username of who you want to find">
         <button type="button" class="searchBtn">search</button>
+        <div class="searchError invisible">
+          
+        </div>
       </div>
       <!--  -->
 
